Microservices/k8Azure/email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: email
  name: email
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: email
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: email
    spec:
      containers:
        - env:
            - name: EMAIL_URL
              value: http://email:5015/email
          image: jiankiat/email:latest
          name: email
          ports:
            - containerPort: 5015
              hostPort: 5015
              protocol: TCP
      restartPolicy: Always
