Microservices/k8Azure/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: order
    spec:
      containers:
        - env:
            - name: OrderURL
              value: http://order:5009/order/
          image: jiankiat/order:latest
          name: order
          ports:
            - containerPort: 5009
              hostPort: 5009
              protocol: TCP
      restartPolicy: Always
