Microservices/k8Azure/order-details-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: order-details
  name: order-details
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-details
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: order-details
    spec:
      containers:
        - env:
            - name: Order_DetailsURL
              value: http://order_details:5050/order_details
            - name: PYTHONUNBUFFERED
              value: "1"
          image: jiankiat/order_details:latest
          name: order-details
          ports:
            - containerPort: 5050
              hostPort: 5050
              protocol: TCP
      restartPolicy: Always
