Microservices/k8Azure/refund-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: refund
  name: refund
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: refund
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: refund
    spec:
      containers:
        - args:
            - sh
            - -c
            - sleep 10 && python Refund.py
          image: jiankiat/refund:latest
          name: refund
          ports:
            - containerPort: 5002
              hostPort: 5002
              protocol: TCP
      restartPolicy: Always
