Microservices/k8Azure/request-refund-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: request-refund
  name: request-refund
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: request-refund
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: request-refund
    spec:
      containers:
        - env:
            - name: request_refund_URL
              value: http://request_refund:5500/request_refund
          image: jiankiat/request_refund:latest
          name: request-refund
          ports:
            - containerPort: 5500
              hostPort: 5500
              protocol: TCP
      restartPolicy: Always
