Microservices/k8Azure/sms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: sms
  name: sms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sms
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: sms
    spec:
      containers:
        - env:
            - name: SMS_URL
              value: http://sms:5014/sms
          image: jiankiat/sms:latest
          name: sms
          ports:
            - containerPort: 5014
              hostPort: 5014
              protocol: TCP
      restartPolicy: Always
