Microservices/k8Azure/update-refund-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: update-refund
  name: update-refund
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: update-refund
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-refund.yml -o k8
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/microservices-default: "true"
        io.kompose.service: update-refund
    spec:
      containers:
        - env:
            - name: update_refund_URL
              value: http://update_refund:5200/update_refund
          image: jiankiat/update_refund:latest
          name: update-refund
          ports:
            - containerPort: 5200
              hostPort: 5200
              protocol: TCP
      restartPolicy: Always
