Microservices/k8Azure/add_reserved_fish-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert -o kubernetes
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: add-reserved-fish
  name: add-reserved-fish
spec:
  ports:
    - name: "5125"
      port: 5125
      targetPort: 5125
  selector:
    io.kompose.service: add-reserved-fish
