Microservices/k8Azure/email-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: email
  name: email
spec:
  ports:
    - name: "5015"
      port: 5015
      targetPort: 5015
  selector:
    io.kompose.service: email
