Microservices/k8Azure/handle_reservation_payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert -o kubernetes
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: handle-reservation-payment
  name: handle-reservation-payment
spec:
  ports:
    - name: "5090"
      port: 5090
      targetPort: 5090
  selector:
    io.kompose.service: handle-reservation-payment
