Microservices/k8Azure/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert -o kubernetes
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: inventory
  name: inventory
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 5006
  selector:
    io.kompose.service: inventory
