Microservices/k8Azure/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: order
  name: order
spec:
  ports:
    - name: "5009"
      port: 5009
      targetPort: 5009
  selector:
    io.kompose.service: order
