Microservices/k8Azure/order_details-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: order-details
  name: order-details
spec:
  ports:
    - name: "5050"
      port: 5050
      targetPort: 5050
  selector:
    io.kompose.service: order-details
