Microservices/k8Azure/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: payment
  name: payment
spec:
  ports:
    - name: "5011"
      port: 5011
      targetPort: 5011
  selector:
    io.kompose.service: payment
