Microservices/k8Azure/request_refund-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: request-refund
  name: request-refund
spec:
  ports:
    - name: "5500"
      port: 5500
      targetPort: 5500
  selector:
    io.kompose.service: request-refund
