Microservices/k8Azure/retrieve_cart_items-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert -o kubernetes
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: retrieve-cart-items
  name: retrieve-cart-items
spec:
  ports:
    - name: "5105"
      port: 5105
      targetPort: 5105
  selector:
    io.kompose.service: retrieve-cart-items
