Microservices/k8Azure/sms-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: sms
  name: sms
spec:
  ports:
    - name: "5014"
      port: 5014
      targetPort: 5014
  selector:
    io.kompose.service: sms
