Microservices/k8Azure/update_refund-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-refund.yml -o k8
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: update-refund
  name: update-refund
spec:
  ports:
    - name: "5200"
      port: 5200
      targetPort: 5200
  selector:
    io.kompose.service: update-refund
